# teaching-learning

./: LICENSE  README.md
algorithms/backprop/: README.md  and.json  main.go  majority.json  makenn.py  makenn5.py  mlp.go  nn1.json  nn2.json  nn3.json  nn4.json
algorithms/mandlebrot/: Makefile  README.md  mandelbrot.py
algorithms/perlin/: perlin.go
data_structures/linked_list/: .gitignore  Makefile  README.md  demo.c  demo.h  linked_list.c  linked_list.h
data_structures/simple_fa/: .gitignore  Makefile  README.md  sample1.txt  sample2.txt  sample3.txt  sample4.txt  simple_fa.py
interpreter/: GNUmakefile  README.md  lexer.c  lexer.h  lexer.test.c  repl  repl.c  test_util.h  tokens.c  tokens.h  util.h
languages/c/simple-cli/: .gitignore  Makefile  README.md  demo_input.txt  simple-cli.c  simple-cli.h
libraries/libagar/graph_editor/: .gitignore  Makefile  Makefile.config  README.md  agarhello  configure  configure.in  graph_editor  main.c
libraries/tcl/minimal/: Makefile  README.md  minimal.c
libraries/tcl/package/: Makefile  README.md  example.tcl  interop.py  samplepackage.c
raytracing/: .gitignore  GNUmakefile  README.md  camera.c  camera.h  hit.c  hit.h  main01.c  main08.c  main09.c  main10.c  main23.c  main29.c  opinionated.mk  ray.c  ray.h  util.c  util.h  vec.c  vec.h
